--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "module": "commonjs",
+    "module": "es2015",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "moduleResolution": "node",
@@ -15,6 +15,7 @@
     "docs",
     "dist",
     "static",
+    "test",
     "webpack.config.ts",
     "node_modules/@types/jasmine"
   ]
