--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,9 @@
 node_modules
 .DS_STORE
 npm-debug.log*
+debug.log
+/dist
 /build
-/typings
-/.awcache
-/electron.js*
-/release
-/test/coverage
+/coverage
 yarn.lock
+yarn-error.log
