--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
     "bluebird": "^3.5.0",
     "bootstrap": "^4.0.0-alpha.6",
     "font-awesome": "^4.7.0",
+    "html-loader": "^0.4.5",
     "isomorphic-fetch": "^2.2.1",
     "jquery": "^3.2.1",
     "markdown-it": "^8.3.0",
