--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "blog",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "A starter kit for a gh-pages Aurelia Blog.",
-  "main": "docs/app.bundle.js",
   "repository": {
     "type": "git",
     "url": "git+ssh://git@github.com/SteveHartzog/blog.git"
@@ -113,6 +112,7 @@
     "isomorphic-fetch": "^2.2.1",
     "jquery": "^3.2.1",
     "markdown-it": "^8.3.0",
+    "markdown-it-deflist": "^2.0.1",
     "markdown-it-emoji": "^1.3.0",
     "sass-loader": "^6.0.2",
     "tether": "^1.4.0",
