--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "transform": {
       "^.+\\.(ts|tsx)$": "<rootDir>/node_modules/ts-jest/preprocessor.js"
     },
-    "testRegex": "\\.test\\.(ts|js)x?$",
+    "testRegex": "\\.spec\\.(ts|js)x?$",
     "setupFiles": [
       "<rootDir>/test/jest-pretest.ts"
     ],
@@ -46,76 +46,75 @@
     }
   },
   "devDependencies": {
-    "@types/jest": "^19.2.2",
-    "@types/lodash": "^4.14.62",
+    "@types/jest": "19.2.2",
+    "@types/lodash": "4.14.63",
     "@types/markdown-it": "0.0.2",
-    "@types/node": "^7.0.12",
-    "@types/webpack": "^2.2.14",
-    "aurelia-loader-nodejs": "^1.0.1",
+    "@types/node": "7.0.14",
+    "@types/webpack": "2.2.15",
+    "aurelia-loader-nodejs": "1.0.1",
     "aurelia-pal-nodejs": "1.0.0-beta.1.0.0",
-    "aurelia-protractor-plugin": "^1.0.1",
-    "aurelia-testing": "^1.0.0-beta.3.0.1",
-    "aurelia-webpack-plugin": "^2.0.0-rc.2",
-    "autoprefixer": "^6.7.7",
-    "awesome-typescript-loader": "^3.1.2",
-    "copy-webpack-plugin": "^4.0.1",
-    "cross-env": "^4.0.0",
-    "css-loader": "^0.28.0",
-    "del-cli": "^0.2.1",
-    "expose-loader": "^0.7.3",
-    "extract-text-webpack-plugin": "^2.1.0",
-    "file-loader": "^0.11.1",
-    "html-webpack-plugin": "^2.28.0",
-    "http-server": "^0.9.0",
-    "istanbul-instrumenter-loader": "^2.0.0",
-    "jasmine-core": "^2.5.2",
-    "jest": "^19.0.2",
-    "json-loader": "^0.5.4",
-    "karma": "^1.3.0",
-    "karma-chrome-launcher": "^2.0.0",
-    "karma-coverage-istanbul-reporter": "^1.0.0",
-    "karma-jasmine": "^1.0.2",
-    "karma-mocha-reporter": "^2.2.0",
-    "karma-webpack": "^2.0.3",
-    "node-sass": "^4.5.2",
-    "nps": "^5.0.5",
-    "nps-utils": "^1.2.0",
-    "postcss-loader": "^1.3.3",
-    "protractor": "^5.1.1",
-    "style-loader": "^0.16.1",
-    "ts-jest": "^19.0.8",
-    "ts-node": "^3.0.2",
-    "typescript": "^2.2.2",
-    "url-loader": "^0.5.8",
-    "wait-on": "^2.0.2",
-    "webpack": "^2.3.3",
-    "webpack-dev-server": "^2.4.2"
+    "aurelia-protractor-plugin": "1.0.3",
+    "aurelia-testing": "1.0.0-beta.3.0.1",
+    "aurelia-webpack-plugin": "2.0.0-rc.2",
+    "autoprefixer": "6.7.7",
+    "awesome-typescript-loader": "3.1.2",
+    "copy-webpack-plugin": "4.0.1",
+    "cross-env": "4.0.0",
+    "css-loader": "0.28.0",
+    "expose-loader": "0.7.3",
+    "extract-text-webpack-plugin": "2.1.0",
+    "file-loader": "0.11.1",
+    "html-webpack-plugin": "2.28.0",
+    "http-server": "0.9.0",
+    "istanbul-instrumenter-loader": "2.0.0",
+    "jasmine-core": "2.6.1",
+    "jest": "19.0.2",
+    "json-loader": "0.5.4",
+    "karma": "1.6.0",
+    "karma-chrome-launcher": "2.0.0",
+    "karma-coverage-istanbul-reporter": "1.2.0",
+    "karma-jasmine": "1.1.0",
+    "karma-mocha-reporter": "2.2.3",
+    "karma-webpack": "2.0.3",
+    "node-sass": "4.5.2",
+    "nps": "5.1.0",
+    "nps-utils": "1.2.0",
+    "postcss-loader": "1.3.3",
+    "protractor": "5.1.1",
+    "style-loader": "0.16.1",
+    "ts-jest": "19.0.14",
+    "ts-node": "3.0.2",
+    "typescript": "2.3.2",
+    "url-loader": "0.5.8",
+    "wait-on": "2.0.2",
+    "webpack": "2.4.1",
+    "webpack-dev-server": "2.4.5"
   },
   "dependencies": {
-    "aurelia-bootstrapper": "^2.1.1",
-    "aurelia-fetch-client": "^1.1.2",
-    "aurelia-framework": "^1.1.2",
-    "aurelia-history-browser": "^1.0.0",
-    "aurelia-loader-webpack": "^2.1.0",
-    "aurelia-logging-console": "^1.0.0",
-    "aurelia-pal-browser": "^1.2.1",
-    "aurelia-polyfills": "^1.2.1",
-    "aurelia-router": "^1.3.0",
-    "aurelia-templating": "^1.4.1",
-    "aurelia-templating-binding": "^1.3.0",
-    "aurelia-templating-resources": "^1.4.0",
-    "aurelia-templating-router": "^1.1.0",
-    "bluebird": "^3.5.0",
-    "bootstrap": "^4.0.0-alpha.6",
-    "font-awesome": "^4.7.0",
-    "html-loader": "^0.4.5",
-    "isomorphic-fetch": "^2.2.1",
-    "jquery": "^3.2.1",
-    "markdown-it": "^8.3.0",
-    "markdown-it-deflist": "^2.0.1",
-    "markdown-it-emoji": "^1.3.0",
-    "sass-loader": "^6.0.2",
-    "tether": "^1.4.0",
-    "twemoji": "^2.2.5"
+    "aurelia-bootstrapper": "2.1.1",
+    "aurelia-fetch-client": "1.1.2",
+    "aurelia-framework": "1.1.2",
+    "aurelia-history-browser": "1.0.0",
+    "aurelia-loader-webpack": "2.1.0",
+    "aurelia-logging-console": "1.0.0",
+    "aurelia-pal-browser": "1.2.1",
+    "aurelia-polyfills": "1.2.1",
+    "aurelia-router": "1.3.0",
+    "aurelia-templating": "1.4.4",
+    "aurelia-templating-binding": "1.3.0",
+    "aurelia-templating-resources": "1.4.0",
+    "aurelia-templating-router": "1.1.0",
+    "bluebird": "3.5.0",
+    "bootstrap": "4.0.0-alpha.6",
+    "font-awesome": "4.7.0",
+    "html-loader": "0.4.5",
+    "isomorphic-fetch": "2.2.1",
+    "jquery": "3.2.1",
+    "markdown-it": "8.3.0",
+    "markdown-it-deflist": "2.0.1",
+    "markdown-it-emoji": "1.3.0",
+    "sass-loader": "6.0.2",
+    "tether": "1.4.0",
+    "twemoji": "2.2.5"
   }
 }
