--- a/src/config/social.config.json
+++ b/src/config/social.config.json
@@ -1,5 +1,6 @@
 {
   "googleplus": "SteveHartzog",
   "twitter": "SteveHartzog",
-  "github": "SteveHartzog"
+  "github": "SteveHartzog",
+  "linkedin": null
 }
