--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "moduleResolution": "node",
     "allowJs": true,
     "sourceRoot": "src",
+    "baseUrl": "src",
     "lib": [
       "es2017", "dom"
     ]
