--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "istanbul-instrumenter-loader": "2.0.0",
     "jasmine-core": "2.6.1",
     "jest": "19.0.2",
+    "jest-cli": "~20.0.0",
     "json-loader": "0.5.4",
     "karma": "1.6.0",
     "karma-chrome-launcher": "2.0.0",
