--- a/src/config/application.config.json
+++ b/src/config/application.config.json
@@ -5,8 +5,5 @@
   "siteDescription": "Dark matter developer enjoying the JavaScript renaissance and TypeScript reformation. :)",
   "avatar": "avatar.jpg",
   "coverImage": "hero.png",
-  "url": "https://SteveHartzog.github.io/",
-  "comments": {
-    "enabled": true
-  }
+  "url": "https://SteveHartzog.github.io/"
 }
