--- a/src/config/firebase.config.json
+++ b/src/config/firebase.config.json
@@ -1,7 +1,7 @@
 {
   "apiKey": "AIzaSyBMcxjjAdJAkd7hwQbvmIpAV_LsirDpjlI",
   "authDomain": "blog-e668a.firebaseapp.com",
-  "databaseURL": "https://blog-e668a.firebaseio.com",
+  "databaseURL": "https://blog-e668a.firebaseio.com/",
   "projectId": "blog-e668a",
   "storageBucket": "blog-e668a.appspot.com",
   "messagingSenderId": "529163607438"
