--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
     "bootstrap": "4.0.0-alpha.6",
     "firebase": "^3.9.0",
     "font-awesome": "4.7.0",
+    "highlight.js": "^9.11.0",
     "html-loader": "0.4.5",
     "isomorphic-fetch": "2.2.1",
     "jquery": "3.2.1",
