feat(profile): Add sidebar profile
closes #15, cleans up share icons a little

--- a/src/config/application.config.json
+++ b/src/config/application.config.json
@@ -5,5 +5,5 @@
   "siteDescription": "Dark matter developer enjoying the JavaScript renaissance and TypeScript reformation. :)",
   "avatar": "avatar.jpg",
   "coverImage": "hero.png",
-  "url": "https://SteveHartzog.github.io/"
+  "url": "https://webrenaissance.org/"
 }
