feat(titlebar): New fixed titlebar Closes #24

--- a/src/config/application.config.json
+++ b/src/config/application.config.json
@@ -1,7 +1,7 @@
 {
-  "siteTitle": null,
+  "siteTitle": "Web Renaissance",
   "siteBlurb": "Dark matter developer enjoying the JavaScript renaissance and TypeScript reformation. :)",
-  "siteName": "Steve Hartzog",
+  "siteName": "WebRenaissance.org",
   "siteDescription": "Dark matter developer enjoying the JavaScript renaissance and TypeScript reformation. :)",
   "avatar": "avatar.jpg",
   "coverImage": "hero.png",
