--- a/package.json
+++ b/package.json
@@ -43,78 +43,83 @@
     }
   },
   "devDependencies": {
-    "@types/jest": "19.2.2",
-    "@types/lodash": "4.14.63",
-    "@types/markdown-it": "0.0.2",
-    "@types/node": "7.0.14",
-    "@types/webpack": "2.2.15",
+    "@firebase/app": "^0.1.5",
+    "@firebase/auth": "^0.3.1",
+    "@firebase/database": "^0.1.6",
+    "@firebase/util": "^0.1.5",
+    "@types/jest": "22.0.1",
+    "@types/lodash": "4.14.92",
+    "@types/markdown-it": "0.0.4",
+    "@types/node": "9.3.0",
+    "@types/webpack": "3.8.2",
     "aurelia-loader-nodejs": "1.0.1",
-    "aurelia-pal-nodejs": "1.0.0-beta.1.0.0",
-    "aurelia-protractor-plugin": "1.0.3",
-    "aurelia-testing": "1.0.0-beta.3.0.1",
-    "aurelia-webpack-plugin": "2.0.0-rc.2",
-    "autoprefixer": "6.7.7",
-    "awesome-typescript-loader": "3.1.2",
-    "copy-webpack-plugin": "4.0.1",
-    "cross-env": "4.0.0",
-    "css-loader": "0.28.0",
-    "expose-loader": "0.7.3",
-    "extract-text-webpack-plugin": "2.1.0",
-    "file-loader": "0.11.1",
-    "html-webpack-plugin": "2.28.0",
-    "http-server": "0.9.0",
-    "istanbul-instrumenter-loader": "2.0.0",
-    "jasmine-core": "2.6.1",
-    "jest": "19.0.2",
-    "jest-cli": "~20.0.0",
-    "json-loader": "0.5.4",
-    "karma": "1.6.0",
-    "karma-chrome-launcher": "2.0.0",
-    "karma-coverage-istanbul-reporter": "1.2.0",
-    "karma-jasmine": "1.1.0",
-    "karma-mocha-reporter": "2.2.3",
-    "karma-webpack": "2.0.3",
-    "node-sass": "4.5.2",
-    "nps": "5.1.0",
-    "nps-utils": "1.2.0",
-    "postcss-loader": "1.3.3",
-    "protractor": "5.1.1",
-    "style-loader": "0.16.1",
-    "ts-jest": "19.0.14",
-    "ts-node": "3.0.2",
-    "typescript": "2.3.2",
-    "url-loader": "0.5.8",
+    "aurelia-pal-nodejs": "1.0.0-beta.2.0.0",
+    "aurelia-protractor-plugin": "1.0.6",
+    "aurelia-testing": "1.0.0-beta.4.0.0",
+    "aurelia-webpack-plugin": "2.0.0-rc.5",
+    "autoprefixer": "7.2.4",
+    "awesome-typescript-loader": "3.4.1",
+    "copy-webpack-plugin": "4.3.1",
+    "cross-env": "5.1.3",
+    "css-loader": "0.28.8",
+    "expose-loader": "0.7.4",
+    "extract-text-webpack-plugin": "3.0.2",
+    "file-loader": "1.1.6",
+    "html-webpack-plugin": "2.30.1",
+    "http-server": "0.10.0",
+    "istanbul-instrumenter-loader": "3.0.0",
+    "jasmine-core": "2.8.0",
+    "jest": "22.0.5",
+    "jest-cli": "~22.0.5",
+    "json-loader": "0.5.7",
+    "karma": "2.0.0",
+    "karma-chrome-launcher": "2.2.0",
+    "karma-coverage-istanbul-reporter": "1.3.3",
+    "karma-jasmine": "1.1.1",
+    "karma-mocha-reporter": "2.2.5",
+    "karma-webpack": "2.0.9",
+    "node-sass": "4.7.2",
+    "nps": "5.7.1",
+    "nps-utils": "1.5.0",
+    "popper.js": "^1.13.0",
+    "postcss-loader": "2.0.10",
+    "protractor": "5.2.2",
+    "style-loader": "0.19.1",
+    "ts-jest": "22.0.1",
+    "ts-node": "4.1.0",
+    "typescript": "2.6.2",
+    "url-loader": "0.6.2",
     "wait-on": "2.0.2",
-    "webpack": "2.4.1",
-    "webpack-dev-server": "2.4.5"
+    "webpack": "3.10.0",
+    "webpack-dev-server": "2.10.1"
   },
   "dependencies": {
     "aurelia-bootstrapper": "2.1.1",
-    "aurelia-fetch-client": "1.1.2",
-    "aurelia-framework": "1.1.2",
-    "aurelia-history-browser": "1.0.0",
+    "aurelia-fetch-client": "1.2.0",
+    "aurelia-framework": "1.1.5",
+    "aurelia-history-browser": "1.1.0",
     "aurelia-loader-webpack": "2.1.0",
     "aurelia-logging-console": "1.0.0",
-    "aurelia-pal-browser": "1.2.1",
-    "aurelia-polyfills": "1.2.1",
-    "aurelia-router": "1.3.0",
-    "aurelia-templating": "1.4.4",
-    "aurelia-templating-binding": "1.3.0",
-    "aurelia-templating-resources": "1.4.0",
-    "aurelia-templating-router": "1.1.0",
-    "bluebird": "3.5.0",
-    "bootstrap": "4.0.0-alpha.6",
-    "firebase": "^3.9.0",
+    "aurelia-pal-browser": "1.3.1",
+    "aurelia-polyfills": "1.2.2",
+    "aurelia-router": "1.4.0",
+    "aurelia-templating": "1.7.0",
+    "aurelia-templating-binding": "1.4.0",
+    "aurelia-templating-resources": "1.5.4",
+    "aurelia-templating-router": "1.2.0",
+    "bluebird": "3.5.1",
+    "bootstrap": "4.0.0-beta.3",
+    "firebase": "4.8.0",
     "font-awesome": "4.7.0",
-    "highlight.js": "^9.11.0",
-    "html-loader": "0.4.5",
+    "highlight.js": "^9.12.0",
+    "html-loader": "0.5.4",
     "isomorphic-fetch": "2.2.1",
     "jquery": "3.2.1",
-    "markdown-it": "8.3.0",
-    "markdown-it-deflist": "2.0.1",
-    "markdown-it-emoji": "1.3.0",
-    "sass-loader": "6.0.2",
-    "tether": "1.4.0",
-    "twemoji": "2.2.5"
+    "markdown-it": "8.4.0",
+    "markdown-it-deflist": "2.0.3",
+    "markdown-it-emoji": "1.4.0",
+    "sass-loader": "6.0.6",
+    "tether": "1.4.3",
+    "twemoji": "2.5.0"
   }
 }
