--- a/package.json
+++ b/package.json
@@ -118,6 +118,7 @@
     "markdown-it": "8.4.0",
     "markdown-it-deflist": "2.0.3",
     "markdown-it-emoji": "1.4.0",
+    "reading-time": "^1.1.0",
     "sass-loader": "6.0.6",
     "tether": "1.4.3",
     "twemoji": "2.5.0"
